# audio_effects_rust

./: Cargo.toml  README.md
sound_effects_rust/src/gui/: mod.rs
src/: main.rs
src/audio/: decoder.rs  mod.rs  player.rs
src/dsp/: effects.rs  mod.rs  processor.rs
src/gui/: controls.rs  mod.rs  window.rs
